<resources>
    <string name="stream_ui_back_button">Back</string>
    <string name="stream_ui_yesterday">Yesterday</string>
    <string name="stream_ui_message_composer_capture_media">Capture Image or Video</string>
    <string name="stream_ui_message_composer_capture_media_take_photo">Capture Image</string>
    <string name="stream_ui_message_composer_capture_media_video">Capture Video</string>
    <string name="stream_ui_message_composer_grant_permission_button">Give Permission</string>
    <string name="stream_ui_message_composer_permission_camera_title">Camera Access Permission</string>
    <string name="stream_ui_message_composer_permission_camera_message">Camera access permission is needed in order to be able to take photos and videos</string>
    <string name="stream_ui_message_composer_permission_storage_title">Storage Access Permission</string>
    <string name="stream_ui_message_composer_permission_storage_message">Storage access permission is needed in order to be able to send and save files</string>
    <string name="stream_ui_message_composer_permission_audio_record_title">Record Audio Permissions</string>
    <string name="stream_ui_message_composer_permission_audio_record_message">Record Audio permission is needed in order to be able to record and send audio files</string>
    <string name="stream_ui_message_composer_permission_setting_message">Enable permissions on App Settings</string>
    <string name="stream_ui_message_composer_permissions_setting_button">Settings</string>
    <string name="stream_ui_message_composer_permissions_visual_media_add_more">Add more</string>
    <string name="stream_ui_message_composer_permissions_files_allow_audio_access">Allow access to audio files</string>
    <string name="stream_ui_message_composer_permissions_files_allow_visual_media_access">Allow access to visual media</string>
    <string name="stream_ui_message_composer_permissions_files_allow_more_visual_media">Allow access to more visual media</string>
    <string name="stream_ui_attachment_picker_error_unresolvable_attachments">Some files could not be loaded and were skipped.</string>
    <string name="stream_ui_message_composer_attachment_picker_files">Files</string>
    <string name="stream_ui_message_composer_attachment_picker_media">Media</string>
    <string name="stream_ui_message_composer_attachment_picker_capture">Capture</string>
    <string name="stream_ui_message_composer_attachment_picker_poll">Poll</string>
    <string name="stream_ui_message_list_attachment_load_failed">The load failed due to an unknown error.</string>
    <string name="stream_ui_message_list_attachment_invalid_url">The load failed due to the invalid url.</string>
    <string name="stream_ui_message_list_attachment_invalid_mime_type">Something went wrong. Unable to open attachment: %s</string>
    <string name="stream_ui_message_list_attachment_display_error">Error. File can\'t be displayed</string>
    <string name="stream_ui_message_list_attachment_opening">Opening…</string>
    <string name="stream_ui_message_list_attachment_downloading">Downloading… %1$s / %2$s</string>
    <string name="stream_ui_message_list_attachment_no_app">No app available to open this file</string>
    <string name="stream_ui_message_list_attachment_download_failed">Failed to download file: %s</string>
    <string name="stream_ui_message_list_video_display_error">Error. Video can\'t be displayed</string>
    <string name="stream_ui_message_list_error_cannot_open_link">There is no app to view this url:\n%s</string>
    <string name="stream_ui_message_list_footnote_edited_now">just now</string>
    <string name="stream_ui_message_list_message_deleted">This message was deleted.</string>
    <string name="stream_ui_message_list_semantics_message_status_read">Message read</string>
    <string name="stream_ui_message_list_semantics_message_status_read_by">Message read by %d members</string>
    <string name="stream_ui_message_list_semantics_message_status_pending">Message is pending</string>
    <string name="stream_ui_message_list_semantics_message_status_sent">Message is sent</string>
    <string name="stream_ui_message_list_semantics_message_status_delivered">Message is delivered</string>
    <string name="stream_ui_message_list_semantics_message_status_failed">Message failed to send</string>
    <string name="stream_ui_message_list_semantics_message_attachments">%d attachments</string>
    <string name="stream_ui_message_list_semantics_message_attachment_image">Image attachment</string>
    <string name="stream_ui_message_list_semantics_message_attachment_video">Video attachment</string>
    <plurals name="stream_ui_message_list_semantics_message_reactions">
        <item quantity="one">%d message reaction</item>
        <item quantity="other">%d message reactions</item>
    </plurals>
    <string name="stream_ui_moderation_dialog_title">Failed to send message</string>
    <string name="stream_ui_moderation_dialog_description">This message might violate our moderation policy. Are you sure you want to send it? Please take a look at our Community Guidelines.</string>
    <string name="stream_ui_moderation_dialog_send">Send anyway</string>
    <string name="stream_ui_moderation_dialog_edit">Edit message</string>
    <string name="stream_ui_moderation_dialog_delete">Delete message</string>
    <string name="stream_ui_channel_list_untitled_channel">Channel without name</string>
    <string name="stream_ui_mention_list_empty">No mentions exist yet…</string>
    <string name="stream_ui_mention_list_error">An error occurred</string>
    <string name="stream_ui_channel_info_contact_title">Contact Info</string>
    <string name="stream_ui_channel_info_group_title">Group Info</string>
    <string name="stream_ui_channel_info_edit_action">Edit</string>
    <string name="stream_ui_channel_info_member_add_button">Add</string>
    <string name="stream_ui_channel_info_view_all">View all</string>
    <plurals name="stream_ui_channel_info_member_count">
        <item quantity="one">%d member</item>
        <item quantity="other">%d members</item>
    </plurals>
    <string name="stream_ui_channel_info_member_count_online">%1$d members · %2$d online</string>
    <string name="stream_ui_channel_info_member_owner">Owner</string>
    <string name="stream_ui_channel_info_member_moderator">Moderator</string>
    <string name="stream_ui_channel_info_expand_button">%d more</string>
    <string name="stream_ui_channel_info_name_field_label">NAME</string>
    <string name="stream_ui_channel_info_name_field_placeholder">Add a group name</string>
    <string name="stream_ui_channel_info_edit_title">Edit</string>
    <string name="stream_ui_channel_info_edit_save_action">Save changes</string>
    <string name="stream_ui_channel_info_edit_name_field_placeholder">Add a group name</string>
    <string name="stream_ui_channel_info_edit_upload_picture">Upload</string>
    <string name="stream_ui_channel_info_edit_group_picture">Edit Group Picture</string>
    <string name="stream_ui_channel_info_edit_choose_from_library">Choose Image</string>
    <string name="stream_ui_channel_info_edit_take_photo">Take Photo</string>
    <string name="stream_ui_channel_info_edit_remove_picture">Reset Picture</string>
    <string name="stream_ui_channel_info_edit_save_error">Failed to save changes</string>
    <string name="stream_ui_channel_info_rename_group_error">Failed to rename group</string>
    <string name="stream_ui_channel_info_mute_conversation_error">Failed to switch the conversation mute state</string>
    <string name="stream_ui_channel_info_mute_group_error">Failed to switch the group mute state</string>
    <string name="stream_ui_channel_info_hide_conversation_error">Failed to switch the conversation hide state</string>
    <string name="stream_ui_channel_info_hide_group_error">Failed to switch the group hide state</string>
    <string name="stream_ui_channel_info_leave_conversation_error">Failed to leave conversation</string>
    <string name="stream_ui_channel_info_leave_group_error">Failed to leave group</string>
    <string name="stream_ui_channel_info_delete_conversation_error">Failed to delete conversation</string>
    <string name="stream_ui_channel_info_delete_group_error">Failed to delete group</string>
    <string name="stream_ui_channel_info_mute_user_error">Failed to switch the user mute state</string>
    <string name="stream_ui_channel_info_block_user_error">Failed to switch the user block state</string>
    <string name="stream_ui_channel_info_ban_member_error">Failed to ban member</string>
    <string name="stream_ui_channel_info_unban_member_error">Failed to unban member</string>
    <string name="stream_ui_channel_info_remove_member_error">Failed to remove member</string>
    <string name="stream_ui_channel_info_add_members_error">Failed to add members</string>
    <string name="stream_ui_channel_info_option_mute_conversation">Mute Conversation</string>
    <string name="stream_ui_channel_info_option_mute_group">Mute Group</string>
    <string name="stream_ui_channel_info_option_hide_conversation">Hide Conversation</string>
    <string name="stream_ui_channel_info_option_hide_group">Hide Group</string>
    <string name="stream_ui_channel_info_option_leave_conversation">Leave Conversation</string>
    <string name="stream_ui_channel_info_option_leave_group">Leave Group</string>
    <string name="stream_ui_channel_info_option_pinned_messages">Pinned Messages</string>
    <string name="stream_ui_channel_info_option_media_attachments">Photos &amp; Videos</string>
    <string name="stream_ui_channel_info_option_files_attachments">Files</string>
    <string name="stream_ui_channel_info_option_mute_user">Mute User</string>
    <string name="stream_ui_channel_info_option_block_user">Block User</string>
    <string name="stream_ui_channel_info_option_unblock_user">Unblock User</string>
    <string name="stream_ui_channel_info_option_delete_conversation">Delete Conversation</string>
    <string name="stream_ui_channel_info_option_delete_group">Delete Group</string>
    <string name="stream_ui_channel_info_hide_conversation_modal_message">Are you sure you want to hide this conversation?</string>
    <string name="stream_ui_channel_info_hide_conversation_modal_clear_history">Also clear the conversation history</string>
    <string name="stream_ui_channel_info_hide_group_modal_message">Are you sure you want to hide this group?</string>
    <string name="stream_ui_channel_info_hide_group_modal_clear_history">Also clear the group history</string>
    <string name="stream_ui_channel_info_leave_conversation_modal_message">Are you sure you want to leave this conversation?</string>
    <string name="stream_ui_channel_info_leave_group_modal_message">Are you sure you want to leave this group?</string>
    <string name="stream_ui_channel_info_delete_conversation_modal_message">Are you sure you want to delete this conversation?</string>
    <string name="stream_ui_channel_info_delete_group_modal_message">Are you sure you want to delete this group?</string>
    <string name="stream_ui_channel_info_member_modal_ban_no_expiration">Ban has no expiration</string>
    <string name="stream_ui_channel_info_member_modal_ban_expires_at">Ban expires %s</string>
    <string name="stream_ui_channel_info_member_modal_ban_expired">Ban has already expired</string>
    <string name="stream_ui_channel_info_member_modal_option_message_member">Send Direct Message</string>
    <string name="stream_ui_channel_info_member_modal_option_ban_member">Ban User</string>
    <string name="stream_ui_channel_info_member_modal_option_unban_member">Unban User</string>
    <string name="stream_ui_channel_info_member_modal_option_mute_user">Mute User</string>
    <string name="stream_ui_channel_info_member_modal_option_unmute_user">Unmute User</string>
    <string name="stream_ui_channel_info_member_modal_option_block_user">Block User</string>
</resources>